@@ -150,6 +150,9 @@
         <member name="F:Upscaledb.UpsConst.UPS_ENABLE_DUPLICATE_KEYS">
             <summary>Flag for Database.Create</summary>
         </member>
+        <member name="F:Upscaledb.UpsConst.UPS_ENABLE_RECOVERY">
+            <summary>Flag for Database.Create</summary>
+        </member>
         <member name="F:Upscaledb.UpsConst.UPS_AUTO_RECOVERY">
             <summary>Flag for Database.Open</summary>
         </member>
@@ -200,6 +203,9 @@
         <member name="F:Upscaledb.UpsConst.UPS_PARAM_FILE_SIZE_LIMIT">
             <summary>Parameter name for Environment.Create,
             Environment.Open</summary>
+        </member>
+        <member name="F:Upscaledb.UpsConst.UPS_PARAM_CUSTOM_COMPARE_NAME">
+            <summary>Parameter name for Database.Create</summary>
         </member>
         <member name="F:Upscaledb.UpsConst.UPS_PARAM_FLAGS">
             <summary>Parameter for GetParameters</summary>
@@ -820,21 +826,6 @@
         <member name="F:Upscaledb.Version.revision">
             <summary>The revision version number</summary>
         </member>
-        <member name="T:Upscaledb.CompareFunc">
-            <summary>
-            Delegate for comparing two keys
-            </summary>
-            <remarks>
-            This delegate compares two keys - the "left-hand side"
-            (lhs) and the "right-hand side" (rhs).
-            <br/>
-            Also see <see cref="M:Upscaledb.Database.SetCompareFunc(Upscaledb.CompareFunc)"/>.
-            </remarks>
-            <param name="lhs">The first key</param>
-            <param name="rhs">The second key</param>
-            <returns>-1 if the first key (lhs) is smaller, +1 if the first
-            key is larger, 0 if both keys are equal</returns>
-        </member>
         <member name="T:Upscaledb.ErrorHandler">
             <summary>
             Delegate for handling error messages
@@ -845,6 +836,26 @@
             <param name="level">The debug level (0 = Debug, 1 = Normal,
             3 = Fatal)</param>
             <param name="message">The message text</param>
+        </member>
+        <member name="T:Upscaledb.CompareFunc">
+             <summary>
+             Delegate for comparing two keys
+             </summary>
+             <remarks>
+             This delegate compares two keys - the "left-hand side"
+             (lhs) and the "right-hand side" (rhs).
+             <br/>
+             Also see <see cref="M:Upscaledb.Database.SetCompareFunc(Upscaledb.CompareFunc)"/>.
+             
+             To convert the parameters to byte[] arrays:
+               byte[] alhs = new byte[lhsLength];
+               byte[] arhs = new byte[rhsLength];
+               Marshal.Copy(lhs, alhs, 0, lhsLength);
+               Marshal.Copy(rhs, arhs, 0, rhsLength);
+            
+             </remarks>
+             <returns>-1 if the first key (lhs) is smaller, +1 if the first
+             key is larger, 0 if both keys are equal</returns>
         </member>
         <member name="T:Upscaledb.Database">
             <summary>
@@ -881,6 +892,16 @@
             <param name="eh">The delegate which is called whenever an
             error message is emitted; set to null to set the default
             error handler</param>
+        </member>
+        <member name="M:Upscaledb.Database.RegisterCompare(System.String,Upscaledb.CompareFunc)">
+            <summary>
+            Registers a global compare function.
+            </summary>
+            <remarks>
+            This method wraps the native ups_register_compare function.
+            </remarks>
+            <param name="name">Descriptive name of the compare function</param>
+            <param name="foo">Delegate object</param>
         </member>
         <member name="M:Upscaledb.Database.SetCompareFunc(Upscaledb.CompareFunc)">
             <summary>
@@ -1282,8 +1303,7 @@
                  than read/write. For performance reasons, this flag should
                  not be used.</item><br/>
                <item><see cref="F:Upscaledb.UpsConst.UPS_ENABLE_TRANSACTIONS"/>
-                 Enables Transactions for this Database. This flag implies
-                 <see cref="F:Upscaledb.UpsConst.UPS_ENABLE_TRANSACTIONS"/>.</item><br/>
+                 Enables Transactions for this Database.</item><br/>
                </list>
              </param>
              <param name="mode">File access rights for the new file. This is
@@ -1371,20 +1391,12 @@
                  upscaledb checks if it can use mmap, since mmap is faster
                  than read/write. For performance reasons, this flag should
                  not be used.</item><br/>
-               <item><see cref="F:Upscaledb.UpsConst.UPS_ENABLE_TRANSACTIONS"/>
-                 Enables logging/recovery for this Database. Will return
-                 <see cref="F:Upscaledb.UpsConst.UPS_NEED_RECOVERY"/>, if the
-                 Database is in an inconsistent state. Not allowed in
-                 combination with <see cref="F:Upscaledb.UpsConst.UPS_IN_MEMORY"/>,
-                 <see cref="F:Upscaledb.UpsConst.UPS_DISABLE_FREELIST_FLUSH"/> and
-                 <see cref="F:Upscaledb.UpsConst.UPS_ENABLE_FSYNC"/>.</item><br/>
                <item><see cref="F:Upscaledb.UpsConst.UPS_AUTO_RECOVERY"/>
                  Automatically recover the Database, if necessary. This
                  flag imples <see cref="F:Upscaledb.UpsConst.UPS_ENABLE_TRANSACTIONS"/>.
                  </item><br/>
                <item><see cref="F:Upscaledb.UpsConst.UPS_ENABLE_TRANSACTIONS"/>
-                 Enables Transactions for this Database. This flag implies
-                 <see cref="F:Upscaledb.UpsConst.UPS_ENABLE_TRANSACTIONS"/>.</item><br/>
+                 Enables Transactions for this Database.</item><br/>
                </list>
              </param>
              <param name="parameters">An array of <see cref="T:Upscaledb.Parameter"/>
