@@ -221,6 +221,7 @@
     <ClInclude Include="..\..\src\1base\util.h" />
     <ClInclude Include="..\..\src\1base\version.h" />
     <ClInclude Include="..\..\src\1errorinducer\errorinducer.h" />
+    <ClInclude Include="..\..\src\1globals\callbacks.h" />
     <ClInclude Include="..\..\src\1globals\globals.h" />
     <ClInclude Include="..\..\src\1mem\mem.h" />
     <ClInclude Include="..\..\src\1os\file.h" />
@@ -314,6 +315,7 @@
     <ClCompile Include="..\..\src\1base\error.cc" />
     <ClCompile Include="..\..\src\1base\util.cc" />
     <ClCompile Include="..\..\src\1errorinducer\errorinducer.cc" />
+    <ClCompile Include="..\..\src\1globals\callbacks.cc" />
     <ClCompile Include="..\..\src\1globals\globals.cc" />
     <ClCompile Include="..\..\src\1mem\mem.cc" />
     <ClCompile Include="..\..\src\1os\os.cc" />
